plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fatepet'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'


	// mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	// lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// asw S3
	implementation 'software.amazon.awssdk:s3:2.20.0'


	// sms
	implementation 'net.nurigo:sdk:4.3.0'

	// email
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'


	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'

	implementation("me.paulschwarz:spring-dotenv:4.0.0")

}

tasks.named('test') {
	useJUnitPlatform()
}


tasks.register('buildZip', Zip) {
	from compileJava
	from processResources

	into('lib') {
		from(configurations.runtimeClasspath) {
			exclude 'tomcat-embed-*'
		}
	}

	archiveFileName = "lambda.zip"
	destinationDirectory = file("$buildDir/distributions")
}

build.dependsOn buildZip